--- a/src/main/resources/assets/zacraftmod/lang/en_us.json
+++ b/src/main/resources/assets/zacraftmod/lang/en_us.json
@@ -5,6 +5,7 @@
 
   "item.zacraftmod.cactus_spawn_egg" : "Cacty Spawn Egg",
   "item.zacraftmod.horor_spawn_egg" : "Horor Spawn Egg",
+  "item.zacraftmod.muchactus_spawn_egg" : "Muchactus Spawn Egg",
 
   "item.zacraftmod.cactus_branch" : "Cactus Branch",
 
